--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="cn.buaa.sn2ov.subsurveyplus.MainActivity"
+    tools:context="cn.buaa.sn2ov.subsurveyplus.ui.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <TextView
