--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,37 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import"/>
+            android:id="@+id/nav_walk_survey"
+            android:icon="@drawable/walk_survey_mini"
+            android:title="走行调查"/>
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery"/>
+            android:id="@+id/nav_transfer_survey"
+            android:icon="@drawable/transfer_survey"
+            android:title="换乘量调查"/>
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow"/>
+            android:id="@+id/nav_stay_survey"
+            android:icon="@drawable/stay_survey"
+            android:title="留乘调查"/>
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools"/>
+            android:id="@+id/nav_od_survey"
+            android:icon="@drawable/od_survey"
+            android:title="OD调查"/>
+        <item
+            android:id="@+id/nav_reverse_survey"
+            android:icon="@drawable/reverse_survey"
+            android:title="反向乘车调查"/>
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Setting">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
+                android:icon="@drawable/personal_center"
+                android:title="个人中心"/>
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send"/>
+                android:id="@+id/nav_setting"
+                android:icon="@drawable/setting"
+                android:title="系统设置"/>
         </menu>
     </item>
 
