--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,8 @@
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:visibility="gone"/>
 
         <!--<ScrollView-->
@@ -51,7 +52,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="1"
-            android:layout_below="@+id/loginAppLogoIV"
+            android:layout_below="@+id/login_progress"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true">
 
