--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,25 +17,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="调查员"
+        android:text="角色"
         android:layout_centerVertical="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_marginLeft="20dp"/>
+        android:layout_toEndOf="@+id/nav_head_avatarIV"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/nav_head_roleTV"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_head_usernameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SN2OV"
+        android:text="用户名"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/nav_head_avatarIV"
         android:layout_marginLeft="20dp"/>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/nav_head_avatarIV"
         android:layout_width="136dp"
         android:layout_height="77dp"
         app:srcCompat="@drawable/avatar"
