--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,7 +63,7 @@
 
     <color name="red">#FF0000</color>
     <color name="gold">#FFD700</color>
-    <color name="yellow">#FFFF00</color>
+    <color name="yellow">#f1d0d0ab</color>
     <color name="green">#008000</color>
     <color name="green_20">#54D314</color>
     <color name="blue">#0000FF</color>
@@ -73,8 +73,8 @@
     <color name="orange">#FFA500</color>
     <color name="ornage_40">#FFA51B</color>
     <color name="ornage_80">#F9B854</color>
-    <color name="lemonyellow">#FFFACD</color>
-    <color name="graywhite">#F5F5F5</color>
+    <color name="lemonyellow">#fffacd</color>
+    <color name="graywhite">#f5f5f5</color>
     <color name="grayslate">#708090</color>
     <color name="lightblue">#0083FF</color>
 
@@ -110,7 +110,7 @@
     <color name="listitem_greenyellow">#ff87b869</color>
     <color name="listitem_yellow">#fffaffbf</color>
     <color name="fff1f2f3">#fff1f2f3</color>
-    <color name="ff40ab54">#ff40ab54</color>
+    <color name="ff40ab54">#40ab54</color>
 
     <!-- 二维码扫描颜色值 -->
     <color name="contents_text">#ff000000</color>
