--- a/app/src/main/res/layout/fragment_transfer_setting.xml
+++ b/app/src/main/res/layout/fragment_transfer_setting.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical">
 
     <TextView
-        android:text="20170202西单换乘量调查"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/transSetting_titleTV"
@@ -17,10 +17,12 @@
         android:layout_marginTop="10dp"/>
 
     <android.support.v7.widget.CardView
+        android:id = "@+id/transSetting_task_CV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
         android:paddingLeft="10dp"
+        android:visibility="gone"
         android:paddingRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -155,6 +157,40 @@
             </RelativeLayout>
 
         </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:id="@+id/transSetting_chooseCV"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/transSetting_chooseRL">
+
+            <TextView
+                android:text="选择其他任务"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="12dp"
+                android:id="@+id/transSetting_chooseTV"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                card_view:srcCompat="@drawable/common_icon_arrow"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="12dp"
+                android:id="@+id/transSetting_chooseIV"/>
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
