--- a/app/src/main/res/layout/fragment_transfer_setting.xml
+++ b/app/src/main/res/layout/fragment_transfer_setting.xml
@@ -6,191 +6,210 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
-        android:text=""
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/transSetting_swipeRefeshL"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/transSetting_titleTV"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="10dp"/>
-
-    <android.support.v7.widget.CardView
-        android:id = "@+id/transSetting_task_CV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        android:paddingLeft="10dp"
-        android:visibility="gone"
-        android:paddingRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_margin="10dp"
-        card_view:cardBackgroundColor="@color/lemonyellow">
-
-
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:visibility="visible">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/transSetting_surDate_RL"
-                android:orientation="horizontal"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:text="调查日期："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/transSetting_surDateTag_TV"
-                    android:layout_centerInParent="false"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/transSetting_surDate_TV"
-                    android:layout_toRightOf="@+id/transSetting_surDateTag_TV"
-                    android:text="2017-02-02"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/black"/>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    card_view:srcCompat="@drawable/survey_pin"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="12dp"
-                    android:id="@+id/imageView"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/transSetting_surTime_RL"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:id="@+id/transSetting_surTimeTag_TV"
-                    android:text="调查时间："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/transSetting_surTime_TV"
-                    android:text="15:00-17:00"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_alignParentTop="false"
-                    android:layout_toEndOf="@+id/transSetting_surTimeTag_TV"
-                    android:layout_centerInParent="false"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/black"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/transSetting_surStation_RL"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:id="@+id/transSetting_surStation_TV"
-                    android:text="西单"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_alignParentTop="false"
-                    android:layout_toEndOf="@+id/transSetting_surStationTag_TV"
-                    android:layout_centerInParent="false"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/transSetting_surStationTag_TV"
-                    android:text="车站："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_alignBaseline="@+id/transSetting_surStation_TV"
-                    android:layout_alignBottom="@+id/transSetting_surStation_TV"
-                    android:layout_alignParentStart="true"
-                    android:textColor="@color/black"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/transSetting_perTask_RL"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:id="@+id/transSetting_perTaskTag_TV"
-                    android:text="个人任务："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/transSetting_perTask_TV"
-                    android:text="1号点位B闸机"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_alignParentTop="false"
-                    android:layout_toEndOf="@+id/transSetting_perTaskTag_TV"
-                    android:layout_centerInParent="false"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/black"/>
-            </RelativeLayout>
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="50dp"
-        android:id="@+id/transSetting_chooseCV"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/transSetting_chooseRL">
-
-            <TextView
-                android:text="选择其他任务"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="12dp"
-                android:id="@+id/transSetting_chooseTV"/>
+                android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                card_view:srcCompat="@drawable/common_icon_arrow"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="12dp"
-                android:id="@+id/transSetting_chooseIV"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                <TextView
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/transSetting_titleTV"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"/>
+
+                <android.support.v7.widget.CardView
+                    android:id = "@+id/transSetting_task_CV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    card_view:cardCornerRadius="4dp"
+                    android:paddingLeft="10dp"
+                    android:visibility="gone"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_margin="10dp"
+                    card_view:cardBackgroundColor="@color/lemonyellow">
+
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RelativeLayout
+                            android:id="@+id/transSetting_surDate_RL"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp">
+
+                            <TextView
+                                android:text="调查日期："
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/transSetting_surDateTag_TV"
+                                android:layout_centerInParent="false"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="@color/black"/>
+
+                            <TextView
+                                android:id="@+id/transSetting_surDate_TV"
+                                android:layout_toRightOf="@+id/transSetting_surDateTag_TV"
+                                android:text="2017-02-02"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/black"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                card_view:srcCompat="@drawable/survey_pin"
+                                android:layout_alignParentTop="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="12dp"
+                                android:id="@+id/imageView"/>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/transSetting_surTime_RL"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp">
+
+                            <TextView
+                                android:id="@+id/transSetting_surTimeTag_TV"
+                                android:text="调查时间："
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="@color/black"/>
+
+                            <TextView
+                                android:id="@+id/transSetting_surTime_TV"
+                                android:text="15:00-17:00"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:layout_alignParentTop="false"
+                                android:layout_toEndOf="@+id/transSetting_surTimeTag_TV"
+                                android:layout_centerInParent="false"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/black"/>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/transSetting_surStation_RL"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp">
+
+                            <TextView
+                                android:id="@+id/transSetting_surStation_TV"
+                                android:text="西单"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:layout_alignParentTop="false"
+                                android:layout_toEndOf="@+id/transSetting_surStationTag_TV"
+                                android:layout_centerInParent="false"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/black"/>
+
+                            <TextView
+                                android:id="@+id/transSetting_surStationTag_TV"
+                                android:text="车站："
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_alignBaseline="@+id/transSetting_surStation_TV"
+                                android:layout_alignBottom="@+id/transSetting_surStation_TV"
+                                android:layout_alignParentStart="true"
+                                android:textColor="@color/black"/>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/transSetting_perTask_RL"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp">
+
+                            <TextView
+                                android:id="@+id/transSetting_perTaskTag_TV"
+                                android:text="个人任务："
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="@color/black"/>
+
+                            <TextView
+                                android:id="@+id/transSetting_perTask_TV"
+                                android:text="1号点位B闸机"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:layout_alignParentTop="false"
+                                android:layout_toEndOf="@+id/transSetting_perTaskTag_TV"
+                                android:layout_centerInParent="false"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/black"/>
+                        </RelativeLayout>
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"
+                    android:id="@+id/transSetting_chooseCV"
+                    android:layout_height="50dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/transSetting_chooseRL">
+
+                        <TextView
+                            android:text="选择其他任务"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginStart="12dp"
+                            android:id="@+id/transSetting_chooseTV"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            card_view:srcCompat="@drawable/common_icon_arrow"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="12dp"
+                            android:id="@+id/transSetting_chooseIV"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
