美化个人中心界面，填充登录用户信息；增加用户信息修改界面，添加接口并实现修改数据功能

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="cn.buaa.sn2ov.subsurveyplus.ui.LoginActivity"
+                tools:context="cn.buaa.sn2ov.subsurveyplus.ui.activity.LoginActivity"
                 android:id="@+id/loginRL">
 
     <ImageView
