--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -47,15 +47,58 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/personCenter_personInfoCV"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/personCenter_persionInfoRL">
+
+            <ImageView
+                app:srcCompat="@drawable/avatar"
+                android:id="@+id/personCenter_avatraIV"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"/>
+
+            <TextView
+                android:text="小凡"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/personCenter_usernameTV"
+                android:layout_marginStart="36dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/personCenter_avatraIV"
+                android:textSize="18sp"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/common_icon_arrow"
+                android:layout_marginEnd="12dp"
+                android:id="@+id/personCenter_personArrowIV"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"/>
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/personCenter_noticeRL"
-        android:layout_below="@+id/personCenter_taskRL"
-        android:layout_alignStart="@+id/personCenter_taskRL"
-        android:layout_alignEnd="@+id/personCenter_taskRL"
-        android:layout_marginTop="2dp"
         android:layout_height="50dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:layout_below="@+id/personCenter_taskRL"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:layout_width="30dp"
@@ -87,49 +130,4 @@
             android:layout_centerHorizontal="false"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/personCenter_personInfoCV"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/personCenter_persionInfoRL">
-
-            <ImageView
-                app:srcCompat="@drawable/avatar"
-                android:id="@+id/personCenter_avatraIV"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
-                android:layout_width="80dp"
-                android:layout_height="80dp"/>
-
-            <TextView
-                android:text="小凡"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/persionCenter_usernameTV"
-                android:layout_marginStart="36dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/personCenter_avatraIV"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/common_icon_arrow"
-                android:layout_marginEnd="12dp"
-                android:id="@+id/personCenter_personArrowIV"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"/>
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
 </RelativeLayout>
