--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,4 +94,24 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="persInfoSettingTagTV" parent="@style/sysSettingTagTV">
+        <item name="android:layout_marginStart">30dp</item>
+    </style>
+
+    <style name="persInfoSettingTV">
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="persInfoSettingArrowIV">
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
 </resources>
