--- a/app/src/main/res/layout/activity_simple_fragment.xml
+++ b/app/src/main/res/layout/activity_simple_fragment.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             toolbar:title="走行时间当前任务"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
