--- a/app/src/main/res/layout/fragment_transfer_setting.xml
+++ b/app/src/main/res/layout/fragment_transfer_setting.xml
@@ -69,6 +69,7 @@
                                 android:layout_centerInParent="false"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="5dp"
+
                                 android:textColor="@color/black"/>
 
                             <TextView
@@ -179,28 +180,47 @@
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginTop="10dp"
-                    android:visibility="gone"
-                    android:id="@+id/transSetting_chooseCV"
-                    android:layout_height="50dp">
+                    android:visibility="visible"
+
+                    android:id="@+id/transSetting_chooseRL"
+                    android:layout_height="wrap_content">
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/transSetting_getMoreTaskRL">
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/white"
+                    android:id="@+id/transSetting_getMoreTaskRL">
+
+                    <TextView
+                        android:text="选择其他任务"
+                        style="@style/sysSettingTagTV"
+                        android:id="@+id/transSetting_chooseTV"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        card_view:srcCompat="@drawable/common_icon_arrow"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="12dp"
+                        android:id="@+id/transSetting_chooseIV"/>
+                     </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/transSetting_moreDataRL"
+                        android:layout_below="@+id/transSetting_getMoreTaskRL"
+                        style="@style/sysSettingRL"
+                        >
 
                         <TextView
-                            android:text="选择其他任务"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginStart="12dp"
-                            android:id="@+id/transSetting_chooseTV"/>
+                            android:text="换乘量数据"
+                            style="@style/sysSettingTagTV"
+                            android:id="@+id/transSetting_moreDataTV"/>
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -209,9 +229,9 @@
                             android:layout_centerVertical="true"
                             android:layout_alignParentEnd="true"
                             android:layout_marginEnd="12dp"
-                            android:id="@+id/transSetting_chooseIV"/>
+                            android:id="@+id/transSetting_moreDataIV"/>
                     </RelativeLayout>
-                </android.support.v7.widget.CardView>
+                </RelativeLayout>
             </LinearLayout>
         </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
