解决换乘量全部任务界面footerView字段不居中bug;解决horizontalScrollView中嵌套listView横向显示不全bug;优化全部数据界面表头显示问题；解决全部数据界面listView上下滑动数据混乱问题

--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -23,9 +23,10 @@
         android:layout_alignParentStart="true">
         <HorizontalScrollView
             android:id="@+id/refresh_HorizontalScrollView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:fillViewport="true"
             android:scrollbars="none"
             >
             <cn.buaa.sn2ov.subsurveyplus.view.TotalDtataListView
