--- a/app/src/main/res/layout/item_footer.xml
+++ b/app/src/main/res/layout/item_footer.xml
@@ -16,11 +16,12 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/loading"
         android:layout_marginLeft="10dip"
         android:textColor="@color/main_gray"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:gravity="center_horizontal"/>
 
 </LinearLayout>
