修改BaseListFragment不能正常加载EmptyLayout的bug，可能是用错修改后的自定义控件所致...修改魅蓝note无法加载realm64的错误（本地删除）

--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -6,13 +6,6 @@
 
     <!-- google 官方下拉刷新 -->
 
-    <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
-        android:id="@+id/error_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
-
-
     <cn.buaa.sn2ov.subsurveyplus.view.TotalDataSwipeRefreshLayout
         android:id="@+id/swiperefreshlayout"
         android:layout_width="fill_parent"
@@ -41,4 +34,9 @@
         </HorizontalScrollView>
     </cn.buaa.sn2ov.subsurveyplus.view.TotalDataSwipeRefreshLayout>
 
+    <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
+        android:id="@+id/baselist_error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </RelativeLayout>
