使用MPAndroidChart绘制换乘量调查本地数据折线图

--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -34,6 +34,12 @@
         </HorizontalScrollView>
     </cn.buaa.sn2ov.subsurveyplus.view.TotalDataSwipeRefreshLayout>
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/base_chart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
     <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
         android:id="@+id/baselist_error_layout"
         android:layout_width="match_parent"
