--- a/app/src/main/res/layout/fragment_od_setting.xml
+++ b/app/src/main/res/layout/fragment_od_setting.xml
@@ -3,9 +3,15 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-    <TextView
-        android:text="OD调查"
+
+    <ListView
+        android:id="@+id/od_setting_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/odSetting_tv"/>
+        android:divider="@null"
+        android:fadingEdge="none"
+        android:headerDividersEnabled="false"
+        android:footerDividersEnabled="false"
+        android:dividerHeight="10dp"
+        />
 </LinearLayout>
